--- a/sites/all/modules/views_slidedeck/skins/slidedeck/skin.css
+++ b/sites/all/modules/views_slidedeck/skins/slidedeck/skin.css
@@ -16,12 +16,12 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck {
     position: relative;
-    padding: 11px 11px 24px;
+    /*padding: 11px 11px 24px;*/
     background: url('back.png') 0 0 #d7d7d7;
-    border: 14px solid #fff;
+    /*border: 14px solid #fff;*/
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
-    height: 350px;
+    height: 450px;
 }
 
 /*
