--- a/sites/all/themes/cooperhewitt/css/style.css
+++ b/sites/all/themes/cooperhewitt/css/style.css
@@ -3,7 +3,7 @@
     width:900px;
     height:369px;
     /*margin-left:190px;*/
-	background:url(images/loading.gif) no-repeat 50% 50%;
+	background:url(../images/loading.gif) no-repeat 50% 50%;
 }
 #slider img {
 	position:absolute;
@@ -25,7 +25,7 @@
 	display:block;
 	width:22px;
 	height:22px;
-	background:url(images/bullets.png) no-repeat;
+	background:url(../images/bullets.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 	margin-right:3px;
@@ -39,7 +39,7 @@
 	display:block;
 	width:30px;
 	height:30px;
-	background:url(images/arrows.png) no-repeat;
+	background:url(../images/arrows.png) no-repeat;
 	text-indent:-9999px;
 	border:0;
 }
