--- a/sites/all/themes/cooperhewitt/css/style2.css
+++ b/sites/all/themes/cooperhewitt/css/style2.css
@@ -169,7 +169,10 @@ form.poll .readon-wrap1 a {color: #333;}
 	color: rgb(183, 0, 0);
 }
 
-
+.block ul {
+    margin: 0;
+    padding: 0 0 0 2em;
+}
 
 
 /* RokAjaxSearch */
