--- a/sites/all/themes/cooperhewitt/css/style2.css
+++ b/sites/all/themes/cooperhewitt/css/style2.css
@@ -171,7 +171,8 @@ form.poll .readon-wrap1 a {color: #333;}
 
 .block ul {
     margin: 0;
-    padding: 0 0 0 2em;
+    padding: 0 0 0 0.8em;
+	list-style: none;
 }
 
 
