fixed up border

--- a/sites/all/themes/cooperhewitt/css/style2.css
+++ b/sites/all/themes/cooperhewitt/css/style2.css
@@ -233,7 +233,7 @@ div.highlight2 {background: #D4D6D7;border:1px solid #D4D6D7;}
 #breadcrumbs-home {background: url(../images/style2/main/typo-assets.png) 0 0 no-repeat;}
 span.breadcrumbs img {background: url(../images/style2/main/arrows.png) 0 -1794px no-repeat;}
 .sectiontableentry1 {background: #f1f1f1;}
-.article-info-surround {background: #f7f7f7;border-bottom: 1px solid #e7e7e7;color: #333;}
+.article-info-surround {background: #f7f7f7;border: 1px solid #e7e7e7;color: #333;}
 .rokradios, .rokchecks, .rokradios-active, .rokchecks-active {background-image: url(../images/style2/main/rokinputs.png);}
 .readon1-l {background-image: url(../images/style2/main/readon-l.png);}
 .readon1-m {background-image: url(../images/style2/main/readon-m.png);}
