--- a/sites/all/modules/colorbox/styles/stockholmsyndrome/colorbox_stockholmsyndrome.css
+++ b/sites/all/modules/colorbox/styles/stockholmsyndrome/colorbox_stockholmsyndrome.css
@@ -55,20 +55,20 @@
  */
 #cboxOverlay {
   background: #000;
-  opacity: 0.35 !important;
+  opacity: 0.4 !important;
 }
 
 #colorbox {
-  background: #fff; /* url(images/bg_tab.png) center bottom repeat-x; */
+  background: #fff url(images/bg_tab.png) center bottom repeat-x;
   box-shadow: 3px 3px 16px #333;
   -moz-box-shadow: 3px 3px 16px #333;
   -webkit-box-shadow: 3px 3px 16px #333;
-  /* border-bottom-left-radius: 9px;
+  border-bottom-left-radius: 9px;
   border-bottom-right-radius: 9px;
   -moz-border-radius-bottomleft: 9px;
   -moz-border-radius-bottomright: 9px;
   -webkit-border-bottom-left-radius: 9px;
-  -webkit-border-bottom-right-radius: 9px; */
+  -webkit-border-bottom-right-radius: 9px;
 }
 #colorbox, #colorbox div {
   overflow: visible; /* Required by the close button. */
