updated files for nda theme and added slidedeck

--- a/sites/default/themes/nda/css/style2.css
+++ b/sites/default/themes/nda/css/style2.css
@@ -10,7 +10,7 @@
 #logo {background: url(../images/style2/logo.png) 0 0 no-repeat;}
 
 /* Backgrounds */
-#main-trans, #main-trans2, #main-trans-top, #main-trans-bottom {background:#BBBBBB;}
+#main-trans, #main-trans2, #main-trans-top, #main-trans-bottom {background:#ffffff;}
 #main-trans2 {padding: 0 10px 10px 10px;}
 .colmask, #mainmodules7 {background: #fff;}
 
