--- a/sites/all/modules/views-slidedeck/skins/slidedeck/skin.css
+++ b/sites/all/modules/views-slidedeck/skins/slidedeck/skin.css
@@ -16,10 +16,12 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck {
     position: relative;
-    padding: 11px 11px 24px;
-    background: url('back.png') 0 0 #CBC0AE;
+	padding: 11px 11px 24px;
+    background: url('back.png') 0 0 #d7d7d7;
     border: 14px solid #fff;
-    height: 395px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 
 /*
@@ -56,12 +58,12 @@ Tags: flexible, white, black, multi-color
  *    etc...
  */
 .skin-slidedeck dl.slidedeck > dd {
-  position: relative;
+    position: relative;
 	height: 294px;
-	padding: 5px 5px 0;
-  margin: 0;
-	border-right: 3px solid #312b24;
-	background: none bottom left #312b24;    /* Note: you should position the background with pixel measurements in IE7 as it improperly calculates the height of the DD element when containing vertical slides */
+	padding: 10px 15px;
+    margin: 0;
+	border-right: 5px solid #d7d7d7;
+	background: url('slides.png') bottom left #d7d7d7;    /* Note: you should position the background with pixel measurements in IE7 as it improperly calculates the height of the DD element when containing vertical slides */
     overflow: hidden;
 }
 
@@ -81,18 +83,19 @@ Tags: flexible, white, black, multi-color
  *     etc...
  */
 .skin-slidedeck dl.slidedeck > dt {
-  position: relative;
+    position: relative;
 	cursor: pointer;
-	height: 35px;
+	height: 43px;
 	line-height: 38px;
-	font-size: 18px;
-	font-weight: normal;
-	font-family: 'akaChenRegular', 'aachen', impact, 'arial black', serif;
+	font-size: 12px;
+	font-weight: bold;
+	font-family: "Futura Bold", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	background: url('spines-rt.png') left top #312b24;
-  margin: 0;
-  padding: 0;
+	background: url('spines.png') top left #d7d7d7;
+	color: #505050;
+    margin: 0;
+    padding: 0;
 }
 
 /*
@@ -100,11 +103,7 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck dl.slidedeck dt.spine:hover {
 	color: #000;
-}
-
-.skin-slidedeck dl.slidedeck > dt a,
-.skin-slidedeck dl.slidedeck > dt a:hover {
-  color: #fff;
+	background-position: center left;
 }
 
 /*
@@ -113,13 +112,8 @@ Tags: flexible, white, black, multi-color
 .skin-slidedeck dl.slidedeck dt.spine.active,
 .skin-slidedeck dl.slidedeck dt.spine.active:hover {
 	cursor: default;
-	background-position: left bottom;
-  overflow: hidden;
-}
-
-.skin-slidedeck dl.slidedeck dt.spine.active a,
-.skin-slidedeck dl.slidedeck dt.spine.active a:hover{
-	color: #312b24;
+	color: #fff;
+	background-position: bottom left;
 }
 
 /*
@@ -129,9 +123,8 @@ Tags: flexible, white, black, multi-color
  * that appear at the bottom of each SlideDeck spine.
  */
 .skin-slidedeck dl.slidedeck dt.spine .index {
-  display: none !important;
 	margin-bottom: 2px;
-  font-size: 24px;
+    font-size: 24px;
 	font-weight: normal;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #505050;
@@ -158,9 +151,7 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck dl.slidedeck .activeCorner {
 	margin-left: -6px;
-	/*
 	background-image: url('corner.png');
-	*/
 	width: 12px;
 	height: 25px;
 }
