fixing footer nav menu, to right

--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -466,7 +466,7 @@ li.leaf {
     margin: 0;
     padding: 0.2em 0.5em 0 0;
 	font-size: 0.9em;
-	float: left;
+	float: right;
 }
 #mainmodules3 a {font-weight: bold;}
 #bottom .moduletable {padding: 15px;}
